LLMAI-99: Pages with non-consecutive object numbers cannot be indexed
* Let the test actually test null objects.